--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,3 +90,14 @@ jobs:
 
       - name: Run
         run: go run ./HelloWorld.go
+
+  java:
+    name: Java
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: "temurin" # See 'Supported distributions' for available options
+          java-version: "17"
+      - run: java -cp java HelloWorld
