--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,4 +100,4 @@ jobs:
         with:
           distribution: "temurin" # See 'Supported distributions' for available options
           java-version: "17"
-      - run: java -cp java HelloWorld
+      - run: javac HelloWorld.java
