--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   php:
+    name: PHP
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -29,6 +30,7 @@ jobs:
           php HelloWorld.php
 
   js:
+    name: Javascript
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -37,6 +39,7 @@ jobs:
           node HelloWorld.js
 
   cs:
+    name: C#
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -47,6 +50,7 @@ jobs:
           dotnet run
 
   python:
+    name: Python
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -57,6 +61,7 @@ jobs:
       - run: python HelloWorld.py
 
   cpp:
+    name: C++
     runs-on: C++
     steps:
       - uses: actions/checkout@v2
