--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: nicledomaS/cmake_build_action@v1.4
+      # - uses: nicledomaS/cmake_build_action@v1.4
       - run: |
           g++ HelloWorld.cpp && ./a.out
 
